--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 package-mode = false
+[tool.poetry.group.dev.dependencies]
+nbconvert = "^7.16.6"
+
