--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "matplotlib (>=3.10.3,<4.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "scikit-learn (>=1.6.1,<2.0.0)",
-    "xgboost (>=3.0.2,<4.0.0)"
+    "xgboost (>=3.0.2,<4.0.0)",
+    "shap (>=0.47.2,<0.48.0)",
+    "statsmodels (>=0.14.4,<0.15.0)"
 ]
 
 [build-system]
